<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mobi.gastronomica.activity.LogInActivity">

    <include
        layout="@layout/progress_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space_1_log_in" />

            <EditText
                android:id="@+id/email"
                style="@style/style_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_horizontal"
                android:layout_marginTop="@dimen/edit_text_margin_top"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/name_user_email" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space_2_log_in" />

            <EditText
                android:id="@+id/password"
                style="@style/style_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_horizontal"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword">

            </EditText>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space_3_log_in" />

            <TextView
                android:id="@+id/olvidaste_pass_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="¿Olvidaste tu Contraseña o Usuario?"
                android:textColor="@android:color/white"
                android:textSize="@dimen/caption"
                android:textStyle="italic" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_gravity="center"
                android:background="@drawable/btn_ingresar"
                android:text="@string/ingresar"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space_3_log_in" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_cuenta"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/caption" />

                <Space
                    android:layout_width="@dimen/space_4_log_in"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/registrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/registrate"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/subhead" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
