<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="mobi.gastronomica.activity.ResetPasswordCode">

    <include
        layout="@layout/progress_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/reset_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fillViewport="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding_to_weight_1">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_left_weight_1"
                    android:layout_marginRight="@dimen/margin_right_weight_1"
                    android:gravity="center"
                    android:text="@string/msn_reset_5"
                    android:textColor="@android:color/white" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_left_weight_1_code"
                    android:layout_marginRight="@dimen/margin_right_weight_1_code"
                    android:gravity="center"
                    android:text="@string/msn_reset_3"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding_to_weight_2">

                <EditText
                    android:id="@+id/code"
                    style="@style/style_edit_text_reset"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_horizontal"
                    android:ems="10"
                    android:hint="@string/code"
                    android:inputType="number"
                    android:maxLength="6" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/space_height_1" />

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_left_weight_1_code"
                    android:layout_marginRight="@dimen/margin_right_weight_1_code"
                    android:gravity="center"
                    android:text="@string/msn_reset_6"
                    android:textColor="@android:color/white" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/space_height_2" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_left_weight_1_code"
                    android:layout_marginRight="@dimen/margin_right_weight_1_code"
                    android:gravity="center"
                    android:text="@string/msn_reset_6"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <Button
                    android:id="@+id/btn_aceptar"
                    android:layout_width="@dimen/btn_width"
                    android:layout_height="@dimen/btn_height"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_ingresar"
                    android:text="@string/agree"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
