<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:adjustViewBounds="true"
    android:background="@drawable/fondo"
    android:gravity="center"
    android:maxHeight="0dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scaleType="fitEnd"
    tools:context="mobi.gastronomica.activity.RegisterActivity">

    <include
        layout="@layout/progress_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space_1_register" />

            <EditText
                android:id="@+id/first_name"
                style="@style/style_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_vertical_edttext"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName">

                <requestFocus />
            </EditText>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space_2_register" />

            <EditText
                android:id="@+id/email"
                style="@style/style_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_vertical_edttext"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space_2_register" />

            <EditText
                android:id="@+id/password"
                style="@style/style_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_vertical_edttext"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space_2_register"
                android:visibility="gone" />

            <EditText
                android:id="@+id/password_confirmar"
                style="@style/style_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_vertical_edttext"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="#80FFFFFF"
                android:ems="10"
                android:hint="@string/password_confirmar"
                android:inputType="textPassword"
                android:visibility="gone" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space_1_register" />

            <Button
                android:id="@+id/btn_registrar"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_registrar"
                android:text="Registrame"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space_3_register" />

            <Button
                android:id="@+id/btn_cancelar"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_cancelar"
                android:text="Cancelar"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
